fixing logo on small screens

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -63,6 +63,10 @@ Version      : 1.0
 /* Mobile Layout: 320px. */
 
 @media only screen and (max-width: 767px) {
+	.logo {
+		width: 100%;
+	
+	}
     .site-header .navbar-collapse {
         opacity: 1;
         visibility: visible;
@@ -181,13 +185,9 @@ Version      : 1.0
 
 /* Wide Mobile Layout: 480px. */
 
-@media only screen and (min-width: 480px) and (max-width: 767px) {}
+@media only screen and (min-width: 480px) and (max-width: 767px) {
+	.logo {
+		width: 75%;
+	}
+}
 
-
-/*
-* ----------------------------------------------------------------------------------------
-Author       : Creativepersonal
-Template Name: Matola - Material Personal resume Template
-Version      : 1.0
-* ----------------------------------------------------------------------------------------
-*/
